# form-weaver

./: .gitignore  .prettierignore  .prettierrc.js  README.md  commitlint.config.js  package-lock.json  package.json
.husky/: pre-commit
client/: README.md  index.html  package-lock.json  package.json  tsconfig.json
client/src/: App.tsx
client/src/api/: client.ts
client/src/components/: FormBlock.tsx  Interview.tsx  MessageInput.tsx  MessageList.tsx  TextBlock.tsx
client/src/components/fields/: ArrayField.tsx  CheckboxField.tsx  FieldRenderer.tsx  NumberField.tsx  RadioField.tsx  SelectField.tsx  TextField.tsx  TextareaField.tsx
client/src/hooks/: useFormBlock.ts  useInterview.ts
client/src/lib/: bindings.ts  conditions.ts  validation.ts
client/src/types/: api.ts  schema.ts  ui-blocks.ts
schemas/: user_profile.json
server/: README.md  pyproject.toml
server/data/examples/: user_profile.json
server/src/interview/: api.py  config.py  main.py
server/src/interview/cli/: __main__.py  commands.py  examples.py  metrics.py  programs.py  schemas.py  simulator.py
server/src/interview/engine/: conditions.py  dspy_modules.py  orchestrator.py  schema_analyzer.py  validator.py
server/src/interview/models/: api.py  schema.py  session.py  ui_blocks.py
server/src/interview/session/: store.py
server/tests/: test_api.py  test_cli_examples.py  test_cli_metrics.py  test_cli_programs.py  test_cli_simulator.py  test_conditions.py  test_orchestrator.py  test_schema_analyzer.py  test_validate_data.py  test_validator.py
