[project]
name = "interview-server"
version = "0.1.0"
description = "Conversational interview system powered by DSPy + Claude"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "dspy>=2.6.0",
    "pydantic>=2.10.0",
    "optuna>=4.0.0",
]

[project.scripts]
interview-cli = "interview.cli.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interview"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "RUF",  # ruff-specific
    "S",    # flake8-bandit (security)
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PERF", # perflint
]
ignore = [
    "S101",  # assert used in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG001", "ARG002", "TCH003"]
# Pydantic models need runtime imports, not TYPE_CHECKING
"src/interview/models/**" = ["TCH001"]
# Engine modules use Pydantic models at runtime via DSPy/validation
"src/interview/engine/**" = ["TCH001"]
"src/interview/session/**" = ["TCH001"]
"src/interview/main.py" = ["TCH001", "TCH003"]
"src/interview/api.py" = ["TCH001"]
# CLI uses print() for output and needs runtime imports for Pydantic/DSPy
"src/interview/cli/**" = ["TCH001", "TCH002", "TCH003", "T20"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["dspy", "dspy.*", "litellm", "litellm.*", "optuna", "optuna.*"]
ignore_missing_imports = true
